--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile </a><br><a href="https://twitter.com/oranwutan">View My Twitter Profile </a></p>
+        
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
